# orange-hrm-playwright

./: pyproject.toml  requirements.txt
allure-results/: 0034bbb8-43b5-44cd-85a4-d07a10c98cc0-container.json  012be752-b72f-40bb-b9d6-921491119351-result.json  02b55bcc-1107-483e-b23b-8170c5f5ac65-result.json  062da678-7198-4abe-97e1-4158083d0f5b-container.json  063b3d37-d716-4a8d-9d25-1418f93f2486-container.json  0a764154-d797-4f3f-bc4f-5bcf931fd04c-container.json  0da80fb7-c852-425a-924f-0162588b9833-container.json  0dc07d11-f3be-4da7-a8bb-e1f3c91dd21b-container.json  0de6250f-3dad-4c51-a081-4d5704f7e44b-container.json  0ef77fae-2786-4d06-a522-baab5f4ed3bb-container.json  0f381b94-75e5-4c9e-be1b-de0861a16103-container.json  1043e08a-0ad1-4796-b545-e4f14519ba95-container.json  12eac2f1-4bc4-4980-a80b-2b530f12f146-container.json  13b13299-1b2e-48c3-978d-48fa3d1dea3a-container.json  142e4f94-4c51-4f95-8a30-de3088ce98bb-container.json  14f97112-bed4-49cd-8422-99de77087270-container.json  1520a34a-5601-44b6-afb4-535f1646cb34-container.json  159d7a21-f0a0-4c9c-b516-b39fee726245-container.json  15f77bbe-f4a3-4afe-a109-175b3f79afa0-result.json  176dcb29-b8ba-4c88-a43c-325d1304e808-container.json  1773eaac-da41-47c0-8c90-47d10f37cfd5-container.json  17e4964d-14a9-4981-83f6-710683cbdd19-container.json  18bd733c-f3d1-4d67-935c-5af84358b6f8-container.json  18c1221e-3696-471d-9385-c3f141773452-container.json  190ba203-61a3-4bab-8fa6-5604cc89f0c5-result.json  19e4ddf3-ac28-43f8-803f-d7eb113c550b-container.json  1a0142af-5806-4eec-8f0f-cb55c527f287-container.json  (+200 more)
pages/: login_page.py  (+2 more)
(+5 files in other folders)
